--- a/app/src/main/res/layout/fragment_contas.xml
+++ b/app/src/main/res/layout/fragment_contas.xml
@@ -4,10 +4,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.gerso.amigosseupauloprotetor.activity.fragments.FragmentContas">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="fragment contas" />
+   <android.support.v7.widget.RecyclerView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:id="@+id/rv_contas">
+
+   </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
